--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
     <link rel="stylesheet" href="resources/theme/app.css">
     <link rel="stylesheet" href="resources/css/main.css">
     <link rel="stylesheet" href="resources/css/precarga.css">
-    <!-- <x-compile> -->
-        <!-- <x-bootstrap> -->
-            <script src="ext/ext-dev.js"></script>
-            <script src="bootstrap.js"></script>
-        <!-- </x-bootstrap> -->
-        <script src="ext/locale/ext-lang-es.js"></script>
-        <script src="app/app.js"></script>
-    <!-- </x-compile> -->
+    
+<script type="text/javascript" src="all-classes.js"></script>
+    <script src="ext/locale/ext-lang-es.js"></script>
 </head>
 <body>
     <div id="loading-mask" style=""></div>
