--- a/index-dev.html
+++ b/index-dev.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="resources/theme/app.css">
     <link rel="stylesheet" href="resources/css/main.css">
     <link rel="stylesheet" href="resources/css/precarga.css">
-<script type="text/javascript" src="all-classes.js"></script>
+    
+    <!-- <x-compile> -->
+        <!-- <x-bootstrap> -->
+            <script src="ext/ext-dev.js"></script>
+            <script src="bootstrap.js"></script>
+        <!-- </x-bootstrap> -->
+        <script src="app/app.js"></script>
+    <!-- </x-compile> -->
+    <script src="ext/locale/ext-lang-es.js"></script>
 </head>
 <body>
     <div id="loading-mask" style=""></div>
